--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
         <a href="{{ '/' | relative_url }}">Home</a>
         <a href="{{ '/about' | relative_url }}">About</a>
         <a href="{{ '/contact' | relative_url }}">Contact</a>
+        <a href="{{ '/publications | relative_url }}">Publications</a>
       </nav>
     </div>
   </header>
