--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
       <nav class="site-nav" aria-label="Main navigation">
         <a href="{{ '/' | relative_url }}">Home</a>
         <a href="{{ '/about' | relative_url }}">About</a>
-        <a href="{{ '/publications | relative_url }}">Publications</a>
+        <a href="{{ '/publications' | relative_url }}">Publications</a>
         <a href="{{ '/contact' | relative_url }}">Contact</a>
        
       </nav>
