--- a/style.css
+++ b/style.css
@@ -23,4 +23,6 @@ h2{margin-top:0}
   .site-nav{display:block;float:none;margin-top:.5rem}
   .site-nav a{display:inline-block;margin:0 .5rem 0 0}
 }
-
+main a {
+  color: #228B22; /* Forest Green */
+}
