--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="{{ '/style.css' | relative_url }}">
 </head>
 <body>
+  {% include navigation.html %}
   <header class="site-header">
     <div class="container">
       <h1 class="site-title">
