--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
   <footer class="site-footer">
     <div class="container">
-      <small>&copy; {{ site.time | date: "%Y" }} {{ site.title }}</small>
+      <small>&copy; {{ site.time | date: "%Y" }} {{ site.author }}</small>
     </div>
   </footer>
 
