--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ page.title | default: site.title }}</title>
   <link rel="stylesheet" href="{{ '/style.css' | relative_url }}">
+  <style>
+  .site-header {
+    background-image: url("{{ '/assets/header.jpg' | relative_url }}");
+  }
+</style>
 </head>
 <body>
 
